changed padding inline start to 0 on todo items to fix responsive issue on mobile

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
     0 10px 1px -4px rgba(0,0,0,0.15),
     0 20px 0 -10px #eee,
     0 20px 1px -9px rgba(0,0,0,0.15);
-  padding-inline-start: 0;
+  padding-inline-start: 0 !important;
 }
 
 #todoItems li {
